--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,8 @@
     <string name="fight_state_none">Done</string>
     <string name="fight_state_active">Active</string>
     <string name="fight_state_rest">Rest</string>
-    <string name="round_counter">Round %1$d</string>
-    <string name="round_timer">%1$d:%2$02d</string>
+    <string name="round_info">Round %1$d - %2$d:%3$02d</string>
+    <string name="punch_stats_heading">Punch stats</string>
 
     <!-- Round stats fragment -->
     <string name="rounds_title">Round %1$d</string>
