Added code to the service to make it run in the foreground.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <!-- Activity that tells the user that the microphone permission is necessary -->
     <string name="microphone_permission_rational">This app calls out random boxing combinations and registers when your glove hits the heavy bag. To register the hit, the app uses the microphone to listen for the bang sound. If you don\'t grant microphone permissions, this app cannot function.\n\nPlease tap back, start over, and grant the microphone permission.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Service notification -->
+    <string name="service_notification_title">Bag Zombie</string>
+    <string name="service_notification_text">The fight is running.</string>
 </resources>
