--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="fight_state_none">Done</string>
     <string name="fight_state_active">Active</string>
     <string name="fight_state_rest">Rest</string>
+    <string name="fight_state_stopped">Stopped</string>
     <string name="round_info">Round %1$d - %2$d:%3$02d</string>
     <string name="punch_stats_heading">Punch stats</string>
 
